Revert SpelTagValueExpressionResolver code
Signed-off-by: Dominique Villard <dominique.villard@doctolib.com>